<resources>
    <string name="app_name" translatable="false">MetisCameras</string>
    <string name="empty_string" translatable="false"> </string>

    <string name="first_camera" translatable="false">first</string>
    <string name="second_camera" translatable="false">second</string>
    <string name="start" translatable="false">start</string>
    <string name="stop" translatable="false">stop</string>
    <string name="scan" translatable="false">scan</string>
    <string name="test" translatable="false">test send</string>

    <string name="rgb" translatable="false">RGB:</string>

    <string name="pattern_label" translatable="false">Pattern Label</string>

    <string name="article" translatable="false">Артикул: </string>
    <string name="article_hint" translatable="false">Введите артикул</string>

    <string name="name" translatable="false">Название: </string>
    <string name="name_hint" translatable="false">Введите название</string>

    <string name="material" translatable="false">Материал: </string>
    <string name="material_hint" translatable="false">Введите материал</string>

    <string name="button_go_back" translatable="false">Подтвердить</string>

    <string name="pattern_info" translatable="false">Паттерн</string>
    <string name="confirm_button" translatable="false">Подтвердить</string>
    <string name="cancel_button" translatable="false">Отклонить</string>

<!--  БЛОК АВТОРИЗАЦИИ  -->
    <string name="auth" translatable="false">Авторизация</string>
    <string name="auth_button_confirm" translatable="false">Подтвердить</string>
    <string name="auth_name_label" translatable="false">Имя</string>
    <string name="auth_name_hint" translatable="false">Введите ваше имя</string>
    <string name="auth_surname_label" translatable="false">Фамилия</string>
    <string name="auth_surname_hint" translatable="false">Введите вашу фамилию</string>
    <string name="auth_password_label" translatable="false">Пароль</string>
    <string name="auth_password_hint" translatable="false">Введите пароль</string>
<!--БЛОК АВТОРИЗАЦИИ КОНЕЦ-->

</resources>