<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthorizationActivity">

    <TextView
        android:id="@+id/auth_main_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auth_surname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/auth_surname_label"
        style="@style/CustomTextView_simple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_main_label" />

    <EditText
        android:id="@+id/auth_surname_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/auth_surname_hint"
        android:autofillHints=""
        android:inputType="text"
        android:minHeight="50dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_surname_label" />


    <TextView
        android:id="@+id/auth_name_label"
        style="@style/CustomTextView_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/auth_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_surname_input" />

    <EditText
        android:id="@+id/auth_name_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/auth_name_hint"
        android:inputType="text"
        android:minHeight="50dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_name_label" />

    <TextView
        android:id="@+id/auth_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_password_label"
        android:layout_marginTop="8dp"
        style="@style/CustomTextView_simple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_name_input" />

    <EditText
        android:id="@+id/auth_password_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/auth_password_hint"
        android:inputType="text"
        android:minHeight="50dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_password_label" />

    <Button
        android:id="@+id/auth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#9575CD"
        android:includeFontPadding="true"
        android:padding="20dp"
        android:text="@string/auth_button_confirm"
        android:textColor="@color/WHITE"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_password_input" />

</androidx.constraintlayout.widget.ConstraintLayout>